# MLOps-Project

./: .gitignore  MLOps-Project.drawio  README.md  ToDo.md  dvc-instructions.md  pyproject.toml  report.md  requirements.txt
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/bentoml/: bentofile.yaml  service.py  service_requirements.txt  setup.sh
airflow/dags/: dataset.yaml  download_weights_serve.py  drop-bucket-key.json  hello_world.py  mse-machledata-key.json  my_dag.py  pipline_training.py  preprocess.py
airflow/dags/src/: gcs.py  parse_annotations.py
airflow/dags/src/preprocessing/: gcs_download.py  gcs_upload.py
experimentation/: read_data.ipynb
src/: bentofile.yaml  service.py  service_requirements.txt
src/datasets/: .gitignore  convert_data.ipynb  images.dvc  label_dict.json
src/experimentation/: README.md  convert_data.ipynb  dataset.yaml  label_dict.json  split_data.ipynb  yolo.ipynb
