[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_project"
version = "0.1.0"
authors = [{ name = "Théo Gallandat", email = "theo.gallandat@master.hes-so.ch" }]
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3"
    "dvc" >= 3.56.0"
]
requires-python = ">=3.12"